# supertonic_service

./: .gitignore  Dockerfile  ExampleONNX.java  Helper.java  PYTHON_README.md  README.md  demo.py  demo.ts  dependency-reduced-pom.xml  example.env  info.md  package.json  pom.xml  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: build.yml  docker.yml
examples/: client.ts  discover.ts  test9_multilingual.py
examples/text/: english.txt  spanish.txt
scripts/: build.sh
src/: core.py  handler.ts  index.ts  server.py  server.test.ts  server.ts
src/core/: __init__.py  constants.py  enums.py  models.py  text_processing.py  validation.py
src/http/: handler.ts  routes.ts
src/main/java/supertonic/: CommandLineArgs.java  ExampleONNX.java
src/main/java/supertonic/inference/: TextToSpeech.java
src/main/java/supertonic/model/: Config.java  Languages.java  Result.java  Style.java
src/p2p/: handler.ts  node.ts
src/services/: api.service.ts  tts.service.ts
src/supertonic_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tts/: __init__.py  asset_manager.py  constants.py  constants.ts  file-handler.ts  file_handler.py  index.ts  init.ts  preprocessor.py  preprocessor.ts  processor.ts  service.py  service.ts  supertonic-client.ts  supertonic-onnx.ts  supertonic_client.py  types.py  types.ts  utils.py  utils.ts
src/tts/client/: http-client.ts  index.ts  libp2p-client.ts  utils.ts
tests/: conftest.py  test_asset_manager.py  test_file_handler.py  test_preprocessor.py  test_service.py  test_utils.py
(+5 files in other folders)
